--- a/css/style.css
+++ b/css/style.css
@@ -440,64 +440,66 @@ a:visited {
 
 #one {
     grid-area: 1 / 1 / 2 / 3;
-    background-image: url("https://i.ibb.co/rwXVfb7/k-10.jpg");
+    background-image: url("../images/one.jpg");
 }
 
 #two {
     grid-area: 1 / 3 / 2 / 4;
-    background-image: url("https://i.ibb.co/K2HDZpp/3.jpg");
+    background-image: url("../images/two.jpg");
 }
 
 #three {
     grid-area: 1 / 4 / 2 / 5;
-    background-image: url("https://i.ibb.co/cbB7knv/choose-a-recessed-look.jpg");
+    background-image: url("../images/three.jpg");
 }
 
 #four {
     grid-area: 2 / 1 / 3 / 2;
-    background-image: url("https://i.ibb.co/BcLMTQt/living-our-best-life-picture-id1198045232-k-20-m-1198045232-s-612x612-w-0-h-ZHIs0t-Nw229p-6-CTs4-Rsw.jpg");
+    background-image: url("../images/four.jpg");
 }
 
 #five {
     grid-area: 2 / 2 / 3 / 3;
-    background-image: url("https://i.ibb.co/QCqtywV/TEMP-gallery-3.jpg");
+    background-image: url("../images/five.jpg");
     
 }
 
 #six {
     grid-area: 2 / 3 / 4 / 4;
-    background-image: url("https://i.ibb.co/MnXpNZz/6129699.jpg");
+    background-image: url("../images/six.jpg");
 }
 
 #seven {
     grid-area: 2 / 4 / 3 / 5;
-    background-image: url("https://i.ibb.co/f4c2YWj/pexels-chan-walrus-958545.jpg");
+    background-image: url("../images/seven.jpg");
 }
 
 #eight {
     grid-area: 3 / 1 / 5 / 2;
-    background-image: url("https://i.ibb.co/sg4LWrm/restaurant-alexander-the-hague-199127.jpg");
+    background-image: url("../images/eight.jpg");
 }
 
 #nine {
     grid-area: 3 / 2 / 4 / 3;
-    background-image: url("https://i.ibb.co/bW4j5yX/concentrated-female-chef-garnishing-food-in-kitchen2.jpg");
+    background-image: url("../images/nine.jpg");
 }
 
 #ten {
     grid-area: 3 / 4 / 4 / 5;
-    background-image: url("https://i.ibb.co/ZXLZLmp/delicious-non-veg-dish.jpg");
+    background-image: url("../images/ten.jpg");
 }
 
 #eleven {
     grid-area: 4 / 2 / 5 / 3;
-    background-image: url("https://i.ibb.co/ZN6WbB6/grid.jpg");
+    background-image: url("../images/eleven.jpg");
 }
 
 #twelve {
     grid-area: 4 / 3 / 5 / 5;
-    background-image: url("https://i.ibb.co/CwGbZYL/portrait-of-a-business-owner-smiling-with-his-staff-at-a-restaurant-picture-id1368500097-b-1-k-20-m.jpg");
+    background-image: url("../images/twelve.jpg");
+    background-position: center top;
 }
+
 
 /* Footer Section */
 #footer-section{
