--- a/css/style.css
+++ b/css/style.css
@@ -555,6 +555,8 @@ a:visited {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-width: 80vw;
+    text-align: center;
     gap: 10px;
 }
 #footer-email-btn{
